Fix gaps in nav section

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,11 @@
 *{
   font-family: Cabin;
 }
+
+body {
+	margin: 0;
+}
+
 .content{
   width: 80%;
   margin:auto;
@@ -40,11 +45,12 @@
     border: solid 2px #FF6961;
     color: #FF6961;
     font-size: 2em;
-    width: 99%;
+    width: 100%;
     text-align: center;
     position: absolute;
-    bottom: 2px;
+    bottom: 0;
     background-color: #FF6961 ;
+		box-sizing: border-box;
 }
 
 .nav-bar a{
